changes layout and content

--- a/aboutus.html
+++ b/aboutus.html
@@ -44,74 +44,83 @@
 </nav>
 
 <div>
-    <img src="resources/aboutus4.jpeg" class="img-fluid max-width: 100%" alt="image of B-bike">
+    <img src="resources/aboutus4.jpeg" class="img-fluid max-width: 100% b-5" alt="image of B-bike">
 </div>
-<div class="card w-50">
-    <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Ambitioni dedisse scripsisse iudicaretur. Cras mattis iudicium purus sit amet fermentum.
-            Donec
-            sed odio operae, eu vulputate felis rhoncus. Praeterea iter est quasdam res quas ex communi. At nos hinc
-            posthac, sitientis piros Afros. Petierunt uti sibi concilium totius Galliae in diem certam indicere. Cras
-            mattis
-            iudicium purus sit amet fermentum.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
-    <img class="card-img-bottom" src="resources/aboutus2.jpeg" alt="Card image cap">
-</div>
-
-<div>
-    <div class="card w-50">
-        <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Ambitioni dedisse scripsisse iudicaretur. Cras mattis iudicium purus sit amet
-                fermentum. Donec
-                sed odio operae, eu vulputate felis rhoncus. Praeterea iter est quasdam res quas ex communi. At nos hinc
-                posthac, sitientis piros Afros. Petierunt uti sibi concilium totius Galliae in diem certam indicere.
-                Cras mattis
-                iudicium purus sit amet fermentum</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+<div class="container">
+    <div class="row row-cols-3">
+        <div class="col-sm">
+            <div class="card-body">
+                <h3 class="card-title">Who we are</h3>
+                <p class="card-text"><strong>We are B-bike.</strong></p>
+                <p>Established in 2020 and ready to shake the field of e-bikes. Our mission is to make electric bikes
+                    accessible
+                    to all. We think that everyone with a heart for the environment should be able to ride an e-bike.
+                    But don't
+                    worry, even though our products are competitively priced our quality is top notch.</p>
+            </div>
         </div>
-        <img class="card-img-bottom" src="resources/aboutus3.jpeg" alt="image of B-bike">
-    </div>
+        <div class="container">
+            <div class="row row-cols-4">
+                <div class="col-sm">
+                    <div class="card-body">
+                        <h3 class="card-title">Our team</h3>
+                        <p class="card-text">At B-bike diversity is not only something for the books.<br> We breath
+                            diversity from the board to our employees and suppliers.</p>
+                    </div>
+                    <img class="card-img-bottom" src="resources/aboutus2.jpeg" alt="image of B-bike">
+                </div>
+                <div class="col-sm">
+                    <div class="card-body">
+                        <h3 class="card-title">Social engagement</h3>
+                        <p class="card-text">At B-bike we love to give back. Beside our give-back-a-tree project we also donate 5% of our profits to social projects.</p>
+                    </div>
+                    <img class="card-img-bottom" src="resources/aboutus3.jpeg" alt="image of B-bike">
+                </div>
+                <div class="col-sm">
+                    <div class="card-body">
+                        <h3 class="card-title">Testimonials</h3>
+                        <p class="card-text">Will look for testimonials to place here with a slider</p>
+                    </div>
+                    <img class="card-img-bottom" src="resources/aboutus1.jpg" alt="image of B-bike">
+                </div>
 
-    <div class="container pt-5">
-        <h1></h1>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-    </div>
+                <h1></h1>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+            </div>
 
-    <!-- Footer -->
-    <footer class="page-footer font-small blue">
+            <!-- Footer -->
+            <footer class="page-footer font-small blue">
 
-        <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">© 2020 Copyright:
-            <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
-        </div>
-        <!-- Copyright -->
+                <!-- Copyright -->
+                <div class="footer-copyright text-center py-3">© 2020 Copyright:
+                    <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+                </div>
+                <!-- Copyright -->
 
-    </footer>
-    <!-- Footer -->
+            </footer>
+            <!-- Footer -->
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
+            <!-- Optional JavaScript -->
+            <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+                    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+                    crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+                    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+                    crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+                    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+                    crossorigin="anonymous"></script>
+
 </body>
 </html>
