--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 <div class="parallax ">
     <div class="wrap-center row">
         <div class="banner-centered col" id="banner-text">
-            <h2 class="mb-0">Welcome to <strong>B-bike</strong><span class="hiddedM">, have a ride on our site</span></h2>
+            <h2 class="mb-0">Welcome to <strong>B-bike</strong><span class="hiddedM">, have a ride on our site</span>
+            </h2>
             <a href="services.html" class="btn btn-outline-light mt-4 text-uppercase">Discover our bikes</a>
         </div>
     </div>
@@ -128,7 +129,7 @@
                     Sint-Pietersvliet 7,<br>
                     2000 Antwerpen
                 </p>
-                <p class="hiddedM">Phone : 555-555-5555</p>
+                <p class="hiddedM">Phone : 03/655.65.65</p>
             </div>
             <div class="col col-8">
                 <table class="table text-light ">
