--- a/blog.html
+++ b/blog.html
@@ -9,164 +9,154 @@
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
 
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">B-bike</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+<div id="otherfont">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">B-bike</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item text-capitalize">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item text-capitalize">
-                <a class="nav-link" href="aboutus.html">about us</a>
-            </li>
-            <li class="nav-item text-capitalize">
-                <a class="nav-link" href="services.html">service</a>
-            </li>
-            <li class="nav-item active text-capitalize">
-                <a class="nav-link" href="blog.html">blog</a>
-            </li>
-            <li class="nav-item text-capitalize">
-                <a class="nav-link" href="contact.html">contact</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-
-<h1 class="text-center"></h1>
-<div class="container pt-5 mt-4 d-flex flex-row">
-    <br>
-    <div class="container text-center">
-        <img src="resources/bycicle6.jpg" class="image-fluid float-right rounded-sm" alt="Cycling" width="500" height="300">
-        <div class="text_spacingblog2" >
-            <h3 class="text-center">History of bikes</h3>
-
-            <p>Bicycles were introduced in the 19th century in Europe, and by the early 21st century, more than 1
-                billion were in existence at a given time. These numbers far exceed the number of cars, both in total
-                and ranked by the number of individual models produced. They are the principal means of transportation
-                in many regions.</p>
-            <p>They also provide a popular form of recreation, and have been adapted for use as children's toys, general
-                fitness, military and police applications, courier services, bicycle racing, and bicycle stunts.</p>
-            <a href="https://en.wikipedia.org/wiki/Bicycle#History" class="btn btn-primary" role="button">More Info</a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item text-capitalize">
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item text-capitalize">
+                    <a class="nav-link" href="aboutus.html">about us</a>
+                </li>
+                <li class="nav-item text-capitalize">
+                    <a class="nav-link" href="services.html">service</a>
+                </li>
+                <li class="nav-item active text-capitalize">
+                    <a class="nav-link" href="blog.html">blog</a>
+                </li>
+                <li class="nav-item text-capitalize">
+                    <a class="nav-link" href="contact.html">contact</a>
+                </li>
+            </ul>
         </div>
-    </div>
-</div>
-<hr>
-<div class="container pt-5 mt-4 d-flex flex-row">
-    <div class="container text-center">
-        <img src="resources/bycicle7.jpg" class="image-fluid float-left rounded-sm" alt="Cycling" width="325" height="350">
-        <div class="text_spacingblog">
-            <h3 class="text-center">Basic Maintenance</h3>
+    </nav>
 
-            <p>The most basic maintenance item is keeping the tires correctly inflated; this can make a noticeable
-                difference as to how the bike feels to ride. Bicycle tires usually have a marking on the side wall
-                indicating the pressure appropriate for that tire. Note that bicycles use much higher pressures than
-                cars: car tires are normally in the range 30 to 40 pounds per square inch while bicycle tires are
-                normally in the range 60 to 100 pounds per square inch.</p>
+    <h1 class="text-center"></h1>
+    <div class="container pt-5 mt-4 d-flex flex-row">
+        <br>
+        <div class="text-center">
+            <img src="resources/bycicle6.jpg" class="image-fluid float-right rounded-sm" alt="Cycling" width="500" height="300">
+            <div class="text_spacingblog2" >
+                <h3 class="text-center">History of bikes</h3>
 
-            <p> Another basic maintenance item is regular lubrication of the chain and pivot points for derailleurs and
-                brakes. Most of the bearings on a modern bike are sealed and grease-filled and require little or no
-                attention; such bearings will usually last for 10,000 miles or more.</p>
-
-
-            <a href="https://en.wikipedia.org/wiki/Bicycle#Maintenance" class="btn btn-primary wrap-center" role="button">More Info</a>
-        </div>
-    </div>
-
-    </div>
-</div>
-    <br>
-<hr>
-<div class="container pt-5 mt-2 d-flex flex-row">
-    <div class="container text-center">
-        <img src="resources/bycicle8.jpg" class="image-fluid float-right rounded-sm" alt="Cycling" width="500" height="300">
-        <div class="text_spacingblog">
-            <h3 class="text-center">Cycling is green</h3>
-
-            <p>One of the profound economic implications of bicycle use is that it liberates the user from oil
-                consumption.(Ballantine, 1972) The bicycle is an inexpensive, fast, healthy and environmentally
-                friendly mode of transport.</p>
-            <p>Ivan Illich stated that bicycle use extended the usable physical environment
-                for people, while alternatives such as cars and motorways degraded and confined people's
-                environment and mobility. Currently, two billion bicycles are in use around the world.</p>
-            <a href="https://en.wikipedia.org/wiki/Bicycle#Environmental_impact" class="btn btn-primary" role="button">More Info</a>
-        </div>
-    </div>
-</div>
-    <br>
-    <br>
-
-</div>
-
-
-
-<!-- Footer -->
-<footer class="page-footer font-small text-light bg-dark ">
-    <div class="container">
-        <div class=" mt-3 d-flex flex-row pt-5">
-            <div class="p-2 m-3 w-25 row">
-                <div class="card-body col">
-                    <h3 class="card-title text-light">B-bike</h3>
-                    <p class="card-text">
-                        Tolhuis,<br>
-                        Sint-Pietersvliet 7,<br>
-                        2000 Antwerpen
-                    </p>
-                    <p>Phone : 555-555-5555</p>
-                </div>
-            </div>
-            <div class="p-2 m-3 w-50 row ">
-                <div class="card-body col">
-                    <table class="table text-light">
-                        <thead>
-                        <tr class="text-center">
-                            <th></th>
-                            <th>Opening hours</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <th scope="row">From monday to saturday :</th>
-                            <td class="text-center">10:00-18:00</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Sunday :</th>
-                            <td class="text-center">Closed</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
+                <p>Bicycles were introduced in the 19th century in Europe, and by the early 21st century, more than 1
+                    billion were in existence at a given time. These numbers far exceed the number of cars, both in total
+                    and ranked by the number of individual models produced. They are the principal means of transportation
+                    in many regions.</p>
+                <p>They also provide a popular form of recreation, and have been adapted for use as children's toys, general
+                    fitness, military and police applications, courier services, bicycle racing, and bicycle stunts.</p>
+                <a href="https://en.wikipedia.org/wiki/Bicycle#History" class="btn btn-primary" role="button" target="_blank">More Info</a>
             </div>
         </div>
     </div>
+    <hr>
+    <div class="container pt-5 mt-4 d-flex flex-row">
+        <div class=" text-center">
+            <img src="resources/bycicle7.jpg" class="image-fluid float-left rounded-sm" alt="Cycling" width="325" height="350">
+            <div class="text_spacingblog">
+                <h3 class="text-center">Basic Maintenance</h3>
 
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-        <a href="https://mdbootstrap.com/"> B-bike, Inc.</a>
+                <p>The most basic maintenance item is keeping the tires correctly inflated; this can make a noticeable
+                    difference as to how the bike feels to ride. Bicycle tires usually have a marking on the side wall
+                    indicating the pressure appropriate for that tire. Note that bicycles use much higher pressures than
+                    cars: car tires are normally in the range 30 to 40 pounds per square inch while bicycle tires are
+                    normally in the range 60 to 100 pounds per square inch.</p>
+
+                <p> Another basic maintenance item is regular lubrication of the chain and pivot points for derailleurs and
+                    brakes. Most of the bearings on a modern bike are sealed and grease-filled and require little or no
+                    attention; such bearings will usually last for 10,000 miles or more.</p>
+
+
+                <a href="https://en.wikipedia.org/wiki/Bicycle#Maintenance" class="btn btn-primary wrap-center" role="button" target="_blank">More Info</a>
+            </div>
+        </div>
+
+        </div>
     </div>
-    <!-- Copyright -->
+        <br>
+    <hr>
+    <div class="container pt-5 mt-2 d-flex flex-row">
+        <div class="text-center">
+            <img src="resources/bycicle8.jpg" class="image-fluid float-right rounded-sm" alt="Cycling" width="500" height="300">
+            <div class="text_spacingblog">
+                <h3 class="text-center">Cycling is green</h3>
 
+                <p>One of the profound economic implications of bicycle use is that it liberates the user from oil
+                    consumption.(Ballantine, 1972) The bicycle is an inexpensive, fast, healthy and environmentally
+                    friendly mode of transport.</p>
+                <p>Ivan Illich stated that bicycle use extended the usable physical environment
+                    for people, while alternatives such as cars and motorways degraded and confined people's
+                    environment and mobility. Currently, two billion bicycles are in use around the world.</p>
+                <a href="https://en.wikipedia.org/wiki/Bicycle#Environmental_impact" class="btn btn-primary" role="button" target="_blank">More Info</a>
+            </div>
+        </div>
+    </div>
+        <br>
+        <br>
+
+    </div>
+
+
+
+    <!-- Footer -->
+    <footer class="page-footer font-small text-light bg-dark ">
+        <div class="container">
+            <div class=" mt-3 d-flex flex-row pt-5">
+                <div class="p-2 m-3 w-25 row">
+                    <div class="card-body col">
+                        <h3 class="card-title text-light">B-bike</h3>
+                        <p class="card-text">
+                            Tolhuis,<br>
+                            Sint-Pietersvliet 7,<br>
+                            2000 Antwerpen
+                        </p>
+                        <p>Phone : 555-555-5555</p>
+                    </div>
+                </div>
+                <div class="p-2 m-3 w-50 row ">
+                    <div class="card-body col">
+                        <table class="table text-light">
+                            <thead>
+                            <tr class="text-center">
+                                <th></th>
+                                <th>Opening hours</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <th scope="row">From monday to saturday :</th>
+                                <td class="text-center">10:00-18:00</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Sunday :</th>
+                                <td class="text-center">Closed</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2020 Copyright:
+            <a href="https://mdbootstrap.com/"> B-bike, Inc.</a>
+        </div>
+        <!-- Copyright -->
+</div>
 
 </footer>
-<!-- Footer -->
 
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
 </body>
 </html>
