--- a/services.html
+++ b/services.html
@@ -46,7 +46,7 @@
 </nav>
 
 
-<div id="carouselExampleIndicators" class="carousel slide container" data-ride="carousel" style="height: 100vh">
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="height: 100vh">
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -97,7 +97,7 @@
 
                     <!--Card image-->
                     <div class="view overlay">
-                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/shoes%20(2).jpg" class="card-img-top" alt="">
+                        <img src="resources/sale1.jpg" class="card-img-top" alt="">
                         <a>
                             <div class="mask rgba-white-slight waves-effect waves-light"></div>
                         </a>
@@ -127,7 +127,7 @@
 
                     <!--Card image-->
                     <div class="view overlay">
-                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/belt.jpg" class="card-img-top" alt="">
+                        <img src="resources/sale2.jpg" class="card-img-top" alt="">
                         <a>
                             <div class="mask rgba-white-slight waves-effect waves-light"></div>
                         </a>
@@ -155,7 +155,7 @@
 
                     <!--Card image-->
                     <div class="view overlay">
-                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/belt.jpg" class="card-img-top" alt="">
+                        <img src="resources/sale3.jpg" class="card-img-top" alt="">
                         <a>
                             <div class="mask rgba-white-slight waves-effect waves-light"></div>
                         </a>
@@ -183,7 +183,7 @@
 
                     <!--Card image-->
                     <div class="view overlay">
-                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/belt.jpg" class="card-img-top" alt="">
+                        <img src="resources/sale4.jpg" class="card-img-top" alt="">
                         <a>
                             <div class="mask rgba-white-slight waves-effect waves-light"></div>
                         </a>
@@ -211,7 +211,7 @@
 
                     <!--Card image-->
                     <div class="view overlay">
-                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/belt.jpg" class="card-img-top" alt="">
+                        <img src="resources/sale5.jpg" class="card-img-top" alt="">
                         <a>
                             <div class="mask rgba-white-slight waves-effect waves-light"></div>
                         </a>
@@ -241,7 +241,7 @@
 
                     <!--Card image-->
                     <div class="view overlay">
-                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/img%20(4).jpg" class="card-img-top" alt="">
+                        <img src="resources/sale6.jpg" class="card-img-top" alt="">
                         <a>
                             <div class="mask rgba-white-slight waves-effect waves-light"></div>
                         </a>
@@ -303,22 +303,21 @@
 </div>
 
 <!-- Footer -->
-<footer class="page-footer font-small blue bg-dark">
-    <div class="container mt-3 d-flex flex-row pt-5">
-        <div class="p-2 m-3 w-25">
-            <div class="card-body text-white">
-                <h3 class="card-title text-white">B-bike</h3>
-                <p class="card-text">
+<!-- Footer -->
+<footer class="page-footer font-small text-light bg-dark ">
+    <div class="container pt-5">
+        <div class="row ">
+            <div class="col col-4">
+                <h3 class="text-light">B-bike</h3>
+                <p class="hiddedM">
                     Tolhuis,<br>
                     Sint-Pietersvliet 7,<br>
                     2000 Antwerpen
                 </p>
-                <p>Phone : 555-555-5555</p>
+                <p class="hiddedM">Phone : 555-555-5555</p>
             </div>
-        </div>
-        <div class="p-2 m-3 w-50 text-">
-            <div class="card-body">
-                <table class="table text-white">
+            <div class="col col-8">
+                <table class="table text-light ">
                     <thead>
                     <tr class="text-center">
                         <th></th>
@@ -341,10 +340,12 @@
     </div>
 
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3 text-white">© 2020 Copyright:
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:
         <a href="https://mdbootstrap.com/"> B-bike, Inc.</a>
     </div>
     <!-- Copyright -->
+
+
 </footer>
 <!-- Footer -->
 <!-- Optional JavaScript -->
