Adding SEO tag in HTML

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords" content="Bike, electrical, Antwerpen,">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -59,7 +60,8 @@
              alt="Generic placeholder image" style="max-height: 300px; max-width: 300px;">
         <div class="media-body m-5 col">
             <h2 class="mt-0">The bike</h2>
-            <p>B-bikes have been designed to offer optimal comfort in the streets of Antwerpen. Its wide saddle, large
+            <p><strong>B-bike</strong> have been designed to offer optimal comfort in the streets of Antwerpen. Its wide
+                saddle, large
                 wheels and front suspension help to tame cobblestones and tram rails. Thanks to its electric assistance
                 up to 25 km / h, you won’t feel the hills of Antwerpen.</p>
             <p class="mb-0">In conjunction with your B-bike hire, you can also hire equipment to transport your
@@ -70,7 +72,7 @@
         <div class="media-body m-5 col">
             <h2 class="mt-0">Sustainability</h2>
             <p>Through developing personalised solutions that facilitate and encourage people to transition to cycling,
-                B-bike contributes to a higher quality of life.</p>
+                <strong>B-bike</strong> contributes to a higher quality of life.</p>
             <p class="mb-0">We manufacture all of our products with clean and renewable energy provided by the sun from
                 the PV farm that we own. By owning a B-Bike you become a part of the community that cares for the
                 sustainability of our planet.</p>
@@ -90,11 +92,11 @@
                 form.</a></p>
         </div>
     </div>
-    <div class="card-group mt-3 text-center">
+    <div class="card-group mt-3  mb-5 text-center">
         <div class="card border-0">
             <div class="card-body">
                 <img class="card-img-top small-im" src="resources/003-settings.png" alt="Card image cap">
-                <h4 class="card-title">Maintenance</h4>
+                <h3 class="card-title">Maintenance</h3>
                 <p class="card-text">We are a full-service bike repair shop. From fixing a flat tire
                     to a comprehensive tune-up, we can have you road-ready in no time.</p>
             </div>
@@ -102,7 +104,7 @@
         <div class="card border-0 ">
             <div class="card-body">
                 <img class="card-img-top small-im" src="resources/001-bycicle.png" alt="Card image cap">
-                <h4 class="card-title">Quality</h4>
+                <h3 class="card-title">Quality</h3>
                 <p class="card-text">With inspiration and innovation, combined with quality and value, we aim to improve
                     the lives of our customers.</p>
             </div>
@@ -110,8 +112,9 @@
         <div class="card border-0 ">
             <div class="card-body">
                 <img class="card-img-top small-im" src="resources/002-credit-card.png" alt="Card image cap">
-                <h4 class="card-title">Payment</h4>
-                <p class="card-text">For the purchase of your B-bike, we offer you payment facility. You have the
+                <h3 class="card-title">Payment</h3>
+                <p class="card-text">For the purchase of your <strong>B-bike</strong>, we offer you payment facility.
+                    You have the
                     opportunity to pay in three times without fees.</p>
             </div>
         </div>
