modify the margine

--- a/services.html
+++ b/services.html
@@ -79,13 +79,13 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
-<div class="container mt-5">
+<div class="container">
 
     <!--Section: Content-->
-    <section class="text-center">
+    <section>
 
         <!-- Section heading -->
-        <h3 class="font-weight-bold mb-5">The Store</h3>
+        <h3 class="font-weight-bold mb-5 text-center">The store</h3>
 
         <div class="row">
 
