last modifications for the day

--- a/aboutus.html
+++ b/aboutus.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <div class="header text-center">
-    <h1></h1>
+    <h1>Still need a header???????</h1>
 </div>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">B-bike</a>
@@ -56,71 +57,107 @@
                     accessible
                     to all. We think that everyone with a heart for the environment should be able to ride an e-bike.
                     But don't
-                    worry, even though our products are competitively priced our quality is top notch.</p>
+                    worry, even though our products are competitively priced our quality is top notch.<strong> Our
+                        Motto: Alone you can ride fast but together you can ride far.</strong></p>
             </div>
         </div>
-        <div class="container">
-            <div class="row row-cols-4">
-                <div class="col-sm">
-                    <div class="card-body">
-                        <h3 class="card-title">Our team</h3>
-                        <p class="card-text">At B-bike diversity is not only something for the books.<br> We breath
-                            diversity from the board to our employees and suppliers.</p>
-                    </div>
-                    <img class="card-img-bottom" src="resources/aboutus2.jpeg" alt="image of B-bike">
-                </div>
-                <div class="col-sm">
-                    <div class="card-body">
-                        <h3 class="card-title">Social engagement</h3>
-                        <p class="card-text">At B-bike we love to give back. Beside our give-back-a-tree project we also donate 5% of our profits to social projects.</p>
-                    </div>
-                    <img class="card-img-bottom" src="resources/aboutus3.jpeg" alt="image of B-bike">
-                </div>
-                <div class="col-sm">
-                    <div class="card-body">
-                        <h3 class="card-title">Testimonials</h3>
-                        <p class="card-text">Will look for testimonials to place here with a slider</p>
-                    </div>
-                    <img class="card-img-bottom" src="resources/aboutus1.jpg" alt="image of B-bike">
-                </div>
-
-                <h1></h1>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
+    </div>
+</div>
+</div>
+<div class="container">
+    <div class="row row-cols-4">
+        <div class="col-sm">
+            <div class="card-body">
+                <h3 class="card-title">Our team</h3>
+                <p class="card-text">At B-bike diversity is not only something for the books.<br> We breath
+                    diversity from the board to our employees and suppliers.</p>
             </div>
+            <img class="card-img-bottom" src="resources/aboutus2.jpeg" alt="image of B-bike">
+        </div>
+        <div class="col-sm">
+            <div class="card-body">
+                <h3 class="card-title">Social engagement</h3>
+                <p class="card-text">At B-bike we love to give back. Beside our give-back-a-tree project we also
+                    donate 5% of our profits to social projects.</p>
+            </div>
+            <img class="card-img-bottom" src="resources/aboutus3.jpeg" alt="image of B-bike">
+        </div>
+        <div class="col-sm">
+            <div class="card-body">
+                <h3 class="card-title">Testimonials</h3>
+                <p class="card-text">Will look for testimonials to place here with a slider</p>
+            </div>
+            <img class="card-img-bottom" src="resources/aboutus1.jpg" alt="image of B-bike">
+        </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+</div>
+<!-- Footer -->
+<footer class="page-footer font-small text-light bg-dark ">
+    <div class="container pt-5">
+        <div class="row ">
+            <div class="col col-4">
+                <h3 class="text-light">B-bike</h3>
+                <p class="hiddedM">
+                    Tolhuis,<br>
+                    Sint-Pietersvliet 7,<br>
+                    2000 Antwerpen
+                </p>
+                <p class="hiddedM">Phone : 555-555-5555</p>
+            </div>
+            <div class="col col-8">
+                <table class="table text-light ">
+                    <thead>
+                    <tr class="text-center">
+                        <th></th>
+                        <th>Opening hours</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row">From monday to saturday :</th>
+                        <td class="text-center">10:00-18:00</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Sunday :</th>
+                        <td class="text-center">Closed</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 
-            <!-- Footer -->
-            <footer class="page-footer font-small blue">
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+        <a href="https://mdbootstrap.com/"> B-bike, Inc.</a>
+    </div>
+    <!-- Copyright -->
 
-                <!-- Copyright -->
-                <div class="footer-copyright text-center py-3">© 2020 Copyright:
-                    <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
-                </div>
-                <!-- Copyright -->
+</footer>
+<!-- Footer -->
 
-            </footer>
-            <!-- Footer -->
-
-            <!-- Optional JavaScript -->
-            <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-                    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-                    crossorigin="anonymous"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-                    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-                    crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-                    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-                    crossorigin="anonymous"></script>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
