--- a/blog.html
+++ b/blog.html
@@ -58,7 +58,7 @@
                     in many regions.</p>
                 <p>They also provide a popular form of recreation, and have been adapted for use as children's toys, general
                     fitness, military and police applications, courier services, bicycle racing, and bicycle stunts.</p>
-                <a href="https://en.wikipedia.org/wiki/Bicycle#History" class="btn btn-primary" role="button" target="_blank">History wiki</a>
+                <a href="https://en.wikipedia.org/wiki/Bicycle#History" class="btn btn-primary" role="button" target="_blank" rel="noopener">History wiki</a>
             </div>
         </div>
     </div>
@@ -80,7 +80,7 @@
                     attention; such bearings will usually last for 10,000 miles or more.</p>
 
 
-                <a href="https://en.wikipedia.org/wiki/Bicycle#Maintenance" class="btn btn-primary wrap-center" role="button" target="_blank">Maintenance wiki</a>
+                <a href="https://en.wikipedia.org/wiki/Bicycle#Maintenance" class="btn btn-primary wrap-center" role="button" target="_blank" rel="noopener">Maintenance wiki</a>
             </div>
         </div>
 
@@ -100,7 +100,7 @@
                 <p>Ivan Illich stated that bicycle use extended the usable physical environment
                     for people, while alternatives such as cars and motorways degraded and confined people's
                     environment and mobility. Currently, two billion bicycles are in use around the world.</p>
-                <a href="https://en.wikipedia.org/wiki/Bicycle#Environmental_impact" class="btn btn-primary" role="button" target="_blank">Environment wiki</a>
+                <a href="https://en.wikipedia.org/wiki/Bicycle#Environmental_impact" class="btn btn-primary" role="button" target="_blank" rel="noopener">Environment wiki</a>
             </div>
         </div>
     </div>
