Trying to fix responsiveness in index.html

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
     </div>
 </div>
 
-<div class="container pt-5">
-    <div class="media border-bottom row">
-        <img class="d-flex align-self-center  img-thumbnail ml-5 col" src="resources/bike2.jpg"
+<div class="container">
+    <div class="media border-bottom row py-5">
+        <img class="d-flex align-self-center  img-thumbnail ml-5 col-sm-12" src="resources/bike2.jpg"
              alt="Generic placeholder image" style="max-height: 300px; max-width: 300px;">
-        <div class="media-body m-5 col">
+        <div class="media-body ml-5  col-sm-12">
             <h2 class="mt-0">The bike</h2>
             <p><strong>B-bike</strong> have been designed to offer optimal comfort in the streets of Antwerpen. Its wide
                 saddle, large
@@ -68,8 +68,8 @@
                 children.</p>
         </div>
     </div>
-    <div class="media border-bottom row">
-        <div class="media-body m-5 col">
+    <div class="media border-bottom row  py-5">
+        <div class="media-body mr-5 col-sm-12">
             <h2 class="mt-0">Sustainability</h2>
             <p>Through developing personalised solutions that facilitate and encourage people to transition to cycling,
                 <strong>B-bike</strong> contributes to a higher quality of life.</p>
@@ -77,13 +77,13 @@
                 the PV farm that we own. By owning a B-Bike you become a part of the community that cares for the
                 sustainability of our planet.</p>
         </div>
-        <img class="d-flex align-self-center img-thumbnail mr-5 col" src="resources/bike3.jpg"
+        <img class="d-flex align-self-center img-thumbnail col-sm-12" src="resources/bike3.jpg"
              style="max-height: 300px; max-width: 300px;" alt="Generic placeholder image">
     </div>
-    <div class="media row">
-        <img class="d-flex align-self-center  img-thumbnail ml-5 col" src="resources/bike4.jpg"
+    <div class="media row py-5">
+        <img class="d-flex align-self-center  img-thumbnail col-sm-12" src="resources/bike4.jpg"
              alt="Generic placeholder image" style="max-height: 300px; max-width: 300px;">
-        <div class="media-body m-5 col">
+        <div class="media-body ml-5 col-sm-12">
             <h2 class="mt-0">Cycle repair and workshop services</h2>
             <p>Our fully equipped workshops are class leading. We handle all bicycle repairs from simple puncture fixes
                 through to complex builds and repairs. Our mechanics are Cytech-qualified and trained on Bromptons, hub
