add buy btn and modify some content

--- a/services.html
+++ b/services.html
@@ -41,7 +41,7 @@
 </nav>
 
 
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="height: 100vh">
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -51,10 +51,10 @@
     </ol>
     <div class="carousel-inner h-100" role="listbox">
         <div class="carousel-item active">
-            <img class="d-block w-100" src="resources/bike1.jpg" alt="900x400"  data-holder-rendered="true">
+            <img class="d-block w-100" src="resources/bike1.jpg" alt="900x400" data-holder-rendered="true">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="resources/bike2.jpg" data-src="holder.js/900x400?theme=industrial" alt="900x400"  data-holder-rendered="true">
+            <img class="d-block w-100" src="resources/bike2.jpg" data-src="holder.js/900x400?theme=industrial" alt="900x400" data-holder-rendered="true">
         </div>
         <div class="carousel-item">
             <img class="d-block w-100" src="resources/bike3.jpg" data-src="holder.js/900x400?theme=industrial" alt="900x400"  data-holder-rendered="true">
@@ -75,219 +75,150 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
-<div class="container">
-
-    <!--Section: Content-->
+<div class="container mt-sm-5">
     <section>
-
-        <!-- Section heading -->
-        <h3 class="font-weight-bold mb-5 text-center">The store</h3>
-
+        <h3 class="font-weight-bold mb-5 text-center">Different Kinds Of Bike</h3>
         <div class="row">
-
-            <!--Grid column-->
             <div class="col-md-4 mb-4">
-                <!--Card-->
                 <div class="card">
-
-                    <!--Card image-->
                     <div class="view overlay">
                         <img src="resources/sale1.jpg" class="card-img-top" alt="">
                         <a>
                             <div class="mask rgba-white-slight waves-effect waves-light"></div>
                         </a>
                     </div>
-                    <!--/.Card image-->
-
-                    <!--Card content-->
                     <div class="card-body">
-                        <!--Title-->
                         <h5 class="card-title">Jeans Shoes <span class="badge badge-primary badge-pill align-text-bottom ml-1">New</span></h5>
-                        <!--Text-->
                         <p class="mb-0 text-muted">$85</p>
+                        <div class="row">
+                            <div class="col-md-12 text-center text-md-left text-md-right">
+                                <button class="btn btn-primary btn-rounded">
+                                    <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</button>
+                            </div>
+                        </div>
                     </div>
-                    <!--/.Card content-->
-
                 </div>
-                <!--/.Card-->
-
             </div>
-            <!--Grid column-->
-
-            <!--Grid column-->
             <div class="col-md-4 mb-4">
-
-                <!--Card-->
                 <div class="card">
-
-                    <!--Card image-->
                     <div class="view overlay">
                         <img src="resources/sale2.jpg" class="card-img-top" alt="">
                         <a>
                             <div class="mask rgba-white-slight waves-effect waves-light"></div>
                         </a>
                     </div>
-                    <!--/.Card image-->
-
-                    <!--Card content-->
                     <div class="card-body">
-                        <!--Title-->
                         <h5 class="card-title">Leather Belt</h5>
-                        <!--Text-->
                         <p class="mb-0 text-muted">$70</p>
+                        <div class="col-md-12 text-center text-md-left text-md-right">
+                            <button class="btn btn-primary btn-rounded">
+                                <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</button>
+                        </div>
                     </div>
-                    <!--/.Card content-->
-
                 </div>
-
-                <!--/.Card-->
             </div>
-            <!--Grid column-->
             <div class="col-md-4 mb-4">
-
-                <!--Card-->
                 <div class="card">
-
-                    <!--Card image-->
                     <div class="view overlay">
                         <img src="resources/sale3.jpg" class="card-img-top" alt="">
                         <a>
                             <div class="mask rgba-white-slight waves-effect waves-light"></div>
                         </a>
                     </div>
-                    <!--/.Card image-->
-
-                    <!--Card content-->
                     <div class="card-body">
-                        <!--Title-->
                         <h5 class="card-title">Leather Belt</h5>
-                        <!--Text-->
                         <p class="mb-0 text-muted">$70</p>
+                        <div class="col-md-12 text-center text-md-left text-md-right">
+                            <button class="btn btn-primary btn-rounded">
+                                <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</button>
+                        </div>
                     </div>
-                    <!--/.Card content-->
-
                 </div>
-
-                <!--/.Card-->
             </div>
-            <!--Grid column-->
             <div class="col-md-4 mb-4">
-
-                <!--Card-->
                 <div class="card">
-
-                    <!--Card image-->
                     <div class="view overlay">
                         <img src="resources/sale4.jpg" class="card-img-top" alt="">
                         <a>
                             <div class="mask rgba-white-slight waves-effect waves-light"></div>
                         </a>
                     </div>
-                    <!--/.Card image-->
-
-                    <!--Card content-->
                     <div class="card-body">
-                        <!--Title-->
                         <h5 class="card-title">Leather Belt</h5>
-                        <!--Text-->
                         <p class="mb-0 text-muted">$70</p>
+                        <div class="col-md-12 text-center text-md-left text-md-right">
+                            <button class="btn btn-primary btn-rounded">
+                                <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</button>
+                        </div>
                     </div>
-                    <!--/.Card content-->
-
                 </div>
-
-                <!--/.Card-->
             </div>
-            <!--Grid column-->
             <div class="col-md-4 mb-4">
-
-                <!--Card-->
                 <div class="card">
-
-                    <!--Card image-->
                     <div class="view overlay">
                         <img src="resources/sale5.jpg" class="card-img-top" alt="">
                         <a>
                             <div class="mask rgba-white-slight waves-effect waves-light"></div>
                         </a>
                     </div>
-                    <!--/.Card image-->
-
-                    <!--Card content-->
                     <div class="card-body">
-                        <!--Title-->
                         <h5 class="card-title">Leather Belt</h5>
-                        <!--Text-->
                         <p class="mb-0 text-muted">$70</p>
+                        <div class="col-md-12 text-center text-md-left text-md-right">
+                            <button class="btn btn-primary btn-rounded">
+                                <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</button>
+                        </div>
                     </div>
-                    <!--/.Card content-->
-
                 </div>
-
-                <!--/.Card-->
             </div>
-            <!--Grid column-->
-
-            <!--Grid column-->
             <div class="col-md-4 mb-4">
-
-                <!--Card-->
                 <div class="card">
-
-                    <!--Card image-->
                     <div class="view overlay">
                         <img src="resources/sale6.jpg" class="card-img-top" alt="">
                         <a>
                             <div class="mask rgba-white-slight waves-effect waves-light"></div>
                         </a>
                     </div>
-                    <!--/.Card image-->
-
-                    <!--Card content-->
                     <div class="card-body">
-                        <!--Title-->
                         <h5 class="card-title">Checkered shirt <span class="badge badge-success badge-pill align-text-bottom ml-1">-25%</span></h5>
-                        <!--Text-->
                         <p class="mb-0 text-muted">$134</p>
+                        <div class="col-md-12 text-center text-md-left text-md-right">
+                            <button class="btn btn-primary btn-rounded">
+                                <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</button>
+                        </div>
                     </div>
-                    <!--/.Card content-->
-
                 </div>
-                <!--/.Card-->
             </div>
-            <!--Grid column-->
-
         </div>
-
     </section>
-    <!--Section: Content-->
-
-
 </div>
 
-<div class="container mt-5">
+<div class="container mt-sm-5">
     <section>
-        <h3 class="font-weight-bold mb-5 text-center">The services</h3>
+        <h3 class="font-weight-bold mb-5 text-center">Our Services</h3>
         <div class="row">
             <div class="card col-md m-1">
                 <img class="card-img-top" src="resources/bike6.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <h4 class="card-title">What we offer</h4>
-                    <p class="card-text">We are your premium partner for bike service and delivery. Our services are perfectly adapted to your needs and your satisfaction is most important to us – no matter where you bought your bike.</p>
+                    <h4 class="card-title">Major or minor repairs</h4>
+                    <p class="card-text"><strong>A major repair</strong> is one that cannot be done immediately. So you will have to leave your bicycle in the workshop.</p>
+                    <p class="card-text"><strong>Minor repairs</strong> (expresso) are intended to allow the cyclist to return home. We will therefore do everything possible to get you back in the saddle quickly and safely in cases of minor breakdown: flat tyre, badly adjusted brakes, to replace brake cable, to tighten the chain, to adjust the derailleur…  These minor repairs are carried out at the bike points and are resolved within 24 hours.</p>
                 </div>
             </div>
             <div class="card col-md m-1">
                 <img class="card-img-top" src="resources/bike7.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <h4 class="card-title">What we offer</h4>
-                    <p class="card-text">We are your premium partner for bike service and delivery. Our services are perfectly adapted to your needs and your satisfaction is most important to us – no matter where you bought your bike.</p>
+                    <h4 class="card-title">Maintenance</h4>
+                    <p class="card-text">Regular bike maintenance is important to ensure a long life for your bike and your own safety. We recommend at least one major maintenance per year. You can do it yourself or entrust this task to CyCLO.</p>
+                    <p class="card-text">At a major maintenance, all the bike parts are checked, fixed, cleaned and oiled. The bike mechanics at CyCLO check the stability of the frame, the fork and tubes, they adjust the play in the wheel hub, tighten the spokes, check vertical centring, etc. They check the tyre pressure and their condition, chain, lighting, gears and brake system.</p>
                 </div>
             </div>
             <div class="card col-md m-1">
                 <img class="card-img-top" src="resources/bike8.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <h4 class="card-title">What we offer</h4>
-                    <p class="card-text">We are your premium partner for bike service and delivery. Our services are perfectly adapted to your needs and your satisfaction is most important to us – no matter where you bought your bike.</p>
+                    <h4 class="card-title">Technical inspection</h4>
+                    <p class="card-text">Regular bike maintenance is important to ensure a long life for your bike and your own safety. We recommend at least one major maintenance per year. You can do it yourself or entrust this task to CyCLO.</p>
+                    <p class="card-text">At a major maintenance, all the bike parts are checked, fixed, cleaned and oiled. The bike mechanics at CyCLO check the stability of the frame, the fork and tubes, they adjust the play in the wheel hub, tighten the spokes, check vertical centring, etc. They check the tyre pressure and their condition, chain, lighting, gears and brake system.</p>
                 </div>
             </div>
         </div>
@@ -297,8 +228,6 @@
     </section>
 </div>
 
-<!-- Footer -->
-<!-- Footer -->
 <footer class="page-footer font-small text-light bg-dark ">
     <div class="container pt-5">
         <div class="row ">
@@ -334,15 +263,13 @@
         </div>
     </div>
 
-    <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
         <a href="https://mdbootstrap.com/"> B-bike, Inc.</a>
     </div>
-    <!-- Copyright -->
-
 
 </footer>
 <!-- Footer -->
+<script src="https://kit.fontawesome.com/b3478a18b6.js" crossorigin="anonymous"></script>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
