--- a/contact.html
+++ b/contact.html
@@ -54,10 +54,10 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-sm">
+        <div class="col-sm pb-3">
             <h2 class="pb-3">Where to find us?</h2>
             <div class="map-responsive">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2498.643848491332!2d4.398762415121469!3d51.22563623908726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3f6591c88f09d%3A0x31d6c38718baba03!2sThe%20Beacon!5e0!3m2!1snl!2sbe!4v1597830979335!5m2!1snl!2sbe" width="480" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2498.643848491332!2d4.398762415121469!3d51.22563623908726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3f6591c88f09d%3A0x31d6c38718baba03!2sThe%20Beacon!5e0!3m2!1snl!2sbe!4v1597830979335!5m2!1snl!2sbe" width="480" height="450" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
         </div>
         <div class="col-sm">
@@ -114,7 +114,7 @@
         </div>
         <div class="col-sm">
         <h2 class="pb-3">Phone us!</h2>
-        <a href="tel:555-555-5555"><img src="resources/phone-icon.png" height="50px"></a>
+        <a href="tel:555-555-5555"><img src="resources/phone-icon.png" alt="Icon of phone" height="50"></a>
             03/655.65.65
     </div>
     </div>
@@ -123,43 +123,40 @@
 <!-- Footer -->
 
 <footer class="page-footer font-small text-light bg-dark ">
-    <div class="container">
-        <div class=" mt-3 d-flex flex-row pt-5">
-            <div class="p-2 m-3 w-25 row">
-                <div class="card-body col">
-                    <h3 class="card-title text-light">B-bike</h3>
-                    <p class="card-text">
-                        Tolhuis,<br>
-                        Sint-Pietersvliet 7,<br>
-                        2000 Antwerpen
-                    </p>
-                    <p>Phone : 555-555-5555</p>
-                </div>
+    <div class="container pt-5">
+        <div class="row ">
+            <div class="col col-4">
+                <h3 class="text-light">B-bike</h3>
+                <p class="hiddedM">
+                    Tolhuis,<br>
+                    Sint-Pietersvliet 7,<br>
+                    2000 Antwerpen
+                </p>
+                <p class="hiddedM">Phone : 555-555-5555</p>
             </div>
-            <div class="p-2 m-3 w-50 row ">
-                <div class="card-body col">
-                    <table class="table text-light">
-                        <thead>
-                        <tr class="text-center">
-                            <th></th>
-                            <th>Opening hours</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <th scope="row">From monday to saturday :</th>
-                            <td class="text-center">10:00-18:00</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Sunday :</th>
-                            <td class="text-center">Closed</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
+            <div class="col col-8">
+                <table class="table text-light ">
+                    <thead>
+                    <tr class="text-center">
+                        <th></th>
+                        <th>Opening hours</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row">From monday to saturday :</th>
+                        <td class="text-center">10:00-18:00</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Sunday :</th>
+                        <td class="text-center">Closed</td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
+
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
         <a href="https://mdbootstrap.com/"> B-bike, Inc.</a>
