trying to improve responsiveness on index.html

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
 <div class="container">
     <div class="media border-bottom row py-5">
-        <img class="d-flex align-self-center  img-thumbnail ml-5 col-sm-12" src="resources/bike1.jpg"
+        <img class="d-flex align-self-center  img-thumbnail mx-5 col-sm-12" src="resources/bike1.jpg"
              alt="Generic placeholder image" style="max-height: 300px; max-width: 300px;">
-        <div class="media-body ml-5  col-sm-12">
+        <div class="media-body col-sm-12">
             <h2 class="mt-0">The bike</h2>
             <p><strong>B-bike</strong> have been designed to offer optimal comfort in the streets of Antwerpen. Its wide
                 saddle, large
@@ -69,7 +69,7 @@
         </div>
     </div>
     <div class="media border-bottom row  py-5">
-        <div class="media-body mr-5 col-sm-12">
+        <div class="media-body col-sm-12">
             <h2 class="mt-0">Sustainability</h2>
             <p>Through developing personalised solutions that facilitate and encourage people to transition to cycling,
                 <strong>B-bike</strong> contributes to a higher quality of life.</p>
@@ -77,13 +77,13 @@
                 the PV farm that we own. By owning a B-Bike you become a part of the community that cares for the
                 sustainability of our planet.</p>
         </div>
-        <img class="d-flex align-self-center img-thumbnail col-sm-12" src="resources/bike3.jpg"
+        <img class="d-flex align-self-center img-thumbnail col-sm-12 mx-5" src="resources/bike3.jpg"
              style="max-height: 300px; max-width: 300px;" alt="Generic placeholder image">
     </div>
     <div class="media row py-5">
-        <img class="d-flex align-self-center  img-thumbnail col-sm-12" src="resources/bike4.jpg"
+        <img class="d-flex align-self-center  img-thumbnail col-sm-12 mx-5" src="resources/bike4.jpg"
              alt="Generic placeholder image" style="max-height: 300px; max-width: 300px;">
-        <div class="media-body ml-5 col-sm-12">
+        <div class="media-body col-sm-12">
             <h2 class="mt-0">Cycle repair and workshop services</h2>
             <p>Our fully equipped workshops are class leading. We handle all bicycle repairs from simple puncture fixes
                 through to complex builds and repairs. Our mechanics are Cytech-qualified and trained on Bromptons, hub
@@ -125,7 +125,7 @@
 <footer class="page-footer font-small text-light bg-dark ">
     <div class="container pt-5">
         <div class="row ">
-            <div class="col col-4">
+            <div class="col-sm-12 col-4">
                 <h3 class="text-light">B-bike</h3>
                 <p class="hiddedM">
                     Tolhuis,<br>
@@ -134,7 +134,7 @@
                 </p>
                 <p class="hiddedM">Phone : 03/655.65.65</p>
             </div>
-            <div class="col col-8">
+            <div class="col-sm-12 col-8">
                 <table class="table text-light ">
                     <thead>
                     <tr class="text-center">
